# ManaphyMysteryDungeon

./: .gitignore  1.dun  CMakeLists.txt  README.md  dungeon.dun  err.dun  resources.rc  test.dun
dungeons/: dungeon.dun
legacy/: solvemodel_legacy.h
src/: aboutpage.c  alertdialog.c  attempt.c  confirmdialog.c  controller.c  drawdungeon.c  drawitembag.c  dungeon.c  dungeonprocess.c  editpage.c  enemylist.c  explorer.c  getfilenamedialog.c  globalvalue.c  graphics.c  helplist.c  helppage.c  hintvalue.c  imagesupport.c  imgui.c  itembag.c  items.c  landevent.c  landevents.c  main.c  messagedialog.c  pages.c  pausepage.c  pokemon.c  simpage.c  solvemodel.c  statemanager.c  statusbar.c  utils.c
src/include/: aboutpage.h  alertdialog.h  appstate.h  attempt.h  confirmdialog.h  controller.h  drawdungeon.h  drawitembag.h  dungeon.h  dungeonprocess.h  editpage.h  enemylist.h  explorer.h  getfilenamedialog.h  globalvalue.h  graphics.h  helplist.h  helppage.h  hintvalue.h  imagesupport.h  imgui.h  itembag.h  items.h  landevent.h  landevents.h  menu.h  messagedialog.h  pages.h  pausepage.h  pokemon.h  simpage.h  solvemodel.h  statemanager.h  statusbar.h  utils.h
